--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-wangeditor-block",
   "description": "vue版wangeditor组件",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "author": "aFei <1106728884@qq.com>",
   "license": "MIT",
   "main": "dist/vue-wangeditor-block.min.js",
@@ -27,6 +27,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "i18next": "^19.8.4",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^4.1.1",
     "vue": "^2.5.11",
