--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "highlight.js": "^10.5.0",
     "i18next": "^19.8.4",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^4.1.1",
