--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-wangeditor-block",
-  "description": "vue版wangeditor组件",
-  "version": "1.3.0",
+  "description": "vue2版wangeditor组件",
+  "version": "2.0.0",
   "author": "aFei <1106728884@qq.com>",
   "license": "MIT",
   "main": "dist/vue-wangeditor-block.min.js",
@@ -11,10 +11,11 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "keywords": [
-    "Vue",
-    "wangeditor"
+    "Vue2",
+    "wangeditor3"
   ],
-  "homepage": "https://github.com/QuietHear/vue-wangeditor-block",
+  "homepage": "https://github.com/QuietHear",
+  "repository": "https://github.com/QuietHear/vue-wangeditor-block",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
